border radius fix on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -426,6 +426,7 @@ div#blur.active {
   height:70%;
   width:300px;
   margin: auto;
+  border-radius: 20px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -434,6 +435,7 @@ div#blur.active {
     max-height: 1000px;
     margin-top: -130px;
     width: 100%;
+    border-radius: 0px 0px 20px 20px;
   }
 }
 @media only screen and (min-width: 1200px) {
